# tradex

./: .gitignore  LICENSE  README.md  install.cmd  pyproject.toml  run_tradex.py  tradex.config.example.toml
docs/: extension_develop_guide.md  user_guide.md
src/extension/: tradex_akshare.py  tradex_baostock.py  tradex_easytrader.py
src/tradex/: app.py
src/tradex-cli/: pyproject.toml
src/tradex-cli/tradex/: __init__.py  app.py  run.py
src/tradex-cli/tradex/prompts/: system.md
src/tradex-cli/tradex/utils/: log.py  prompt.py
src/tradex-helper/: pyproject.toml
src/tradex-helper/tradex_helper/: __init__.py  cli.py  config_manager.py  extension_discovery.py
src/tradex-tui/: pyproject.toml
src/tradex-tui/tradex_tui/: __init__.py  app.py  models.py
src/tradex-tui/tradex_tui/widgets/: approval.py  message_log.py  status_bar.py  work_indicator.py
src/tradex/prompts/: system.md
src/tradex/utils/: config.py  prompt.py
