[project]
name = "tradex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.6",
    "tradex_cli",
    "tradex_tui",
]

[tool.uv.workspace]
members = ["src/tradex-tui", "src/tradex-cli"]

[tool.uv.sources]
tradex_cli = { workspace = true }
tradex_tui = { workspace = true }
