[project]
name = "tradex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "jinja2>=3.1.6",
    "tradex_cli",
    "tradex_tui",
    "tradex_helper",
    "pandas>=2.3.3",
    "numpy>=2.3.4",
    "matplotlib>=3.10.7",
    "scipy>=1.16.3",
]

[project.scripts]
tradex = "tradex.run:cli"

[tool.uv]
package = true

[tool.uv.workspace]
members = ["src/tradex-tui", "src/tradex-cli", "src/tradex-helper"]

[tool.uv.sources]
tradex_cli = { workspace = true }
tradex_tui = { workspace = true }
tradex_helper = { workspace = true }
