[project]
name = "tradex_helper"
version = "0.1.0"
description = "Tradex 配置与扩展向导"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.9.0",
    "tomlkit>=0.13.2",
    "questionary>=2.0.1",
]

[project.scripts]
tradex-helper = "tradex_helper.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
