[project]
name = "tradex_tui"
version = "0.2.23"
description = "Textual + Rich UI components for CLI AI agents (interaction area + status bar + approvals)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["textual>=0.58.0", "rich>=13.7.0"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
